Fix: show cattol header on tablets

--- a/public/css/sass/common.scss
+++ b/public/css/sass/common.scss
@@ -4640,7 +4640,7 @@ body.side-popup {
       }
     }
   }
-  header,
+  .started header,
   .wrapper-claim,
   .wrapper-upload,
   footer,
